# DeliveryBot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  botClassDiagram.puml  docker-compose.yml
bot/: CMakeLists.txt  main.cpp
bot/app/: BotApplication.h
bot/base/engine/: EngineAbstract.h
common/base/app/: ApplicationAbstract.h  ApplicationInterface.h
common/base/command/: BotCommand.h  Command.h  CommandAbstract.h  CommandInterface.h
common/base/command/instruction/: Instruction.h  InstructionAbstract.h  InstructionIdType.h  InstructionInterface.h  InstructionType.h
common/base/config/: Config.h  ConfigAbstract.h  ConfigInterface.h  IniConfig.h
common/base/config/parser/: IniParser.h  ParserAbstract.h  ParserInterface.h
common/base/config/setting/: IniSetting.h  SettingAbstract.h  SettingIdType.h  SettingInterface.h  SettingType.h
common/base/direction/: DirectionAbstract.h
common/base/exception/: ConfigException.h  DirectionException.h  ExceptionBase.h  InstructionException.h  InvalidConfigException.h  MosquittoException.h  RequestException.h  WrongSettingTypeException.h  WrongTypeConversionException.h
common/base/log/: ConsoleLog.h  LogAbstract.h  LogInterface.h  LogLevel.h  Logger.h
common/base/network/component/: MosquittoAbstract.h  MosquittoPublisher.h  MosquittoSettings.h  MosquittoSubscriber.h
common/base/network/parser/: ParserAbstract.h  ParserInterface.h
common/base/network/request/: RequestAbstract.h  RequestInterface.h
common/base/network/response/: ResponseAbstract.h  ResponseInterface.h
common/base/network/serializer/: SerializerAbstract.h  SerializerInterface.h
common/base/request/: RequestAbstract.h
common/base/response/: ResponseAbstract.h
common/enums/: BotState.h  BotStatus.h
common/network/request/: MQTTRequest.h
common/network/serializer/: MapSerializer.h
config/bot/: bot.ini
config/server/: server.ini
docker/: entry.sh
server/: CMakeLists.txt  main.cpp
server/app/: ServerApplication.h
server/base/bot/: Bot.h
server/base/camera/: CameraAbstract.h
server/command/: BotCommand.h
server/exception/: BotCommandException.h
server/network/component/: ServerMosquittoPublisher.h
server/network/request/: MQTTRequest.h
server/network/serialiazer/: BotCommandSerializer.h  CommandSerializer.h
server/order/: OrderAbstract.h
tests/: CMakeLists.txt
